@@ -46,6 +46,8 @@ from telepathy.constants import (
     CONNECTION_STATUS_CONNECTED, CONNECTION_STATUS_DISCONNECTED,
     CONNECTION_STATUS_CONNECTING)
 
+from notify import NotifyAlert
+
 logger = logging.getLogger('chat-activity')
 
 class Chat(Activity):
@@ -75,8 +77,7 @@ class Chat(Activity):
                 self._joined_cb()
         else:
             # we are creating the activity
-            self.add_text(None, _('Share, or invite someone.'),
-                          status_message=True)
+            self._alert(_('Off-line'), _('Share, or invite someone.'))
 
     def _shared_cb(self, activity):
         logger.debug('Chat was shared')
@@ -85,7 +86,7 @@ class Chat(Activity):
     def _setup(self):
         self.text_channel = TextChannelWrapper(self)
         self.text_channel.set_received_callback(self._received_cb)
-        self.add_text(None, _('Connected'), status_message=True)
+        self._alert(_('On-line'), _('Connected'))
         self._shared_activity.connect('buddy-joined', self._buddy_joined_cb)
         self._shared_activity.connect('buddy-left', self._buddy_left_cb)
         self.entry.set_editable(True)
@@ -106,6 +107,17 @@ class Chat(Activity):
         else:
             nick = '???'
         self.add_text(buddy, text)
+
+    def _alert(self, title, text=None):
+        alert = NotifyAlert(timeout=5)
+        alert.props.title = title
+        alert.props.msg = text
+        self.add_alert(alert)
+        alert.connect('response', self._alert_cancel_cb)
+        alert.show()
+
+    def _alert_cancel_cb(self, alert, response_id):
+        self.remove_alert(alert)
 
     def _buddy_joined_cb (self, activity, buddy):
         """Show a buddy who joined"""
