@@ -1,3 +1,4 @@
+* Use sugar.graphics.alert to show status info (morgs)
 * #4320: better URL handling and display (morgs)
 * #4331: Don't crash/ignore non-Sugar buddies (morgs)
 
